--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,7 +51,7 @@
                 <!-- Avatar avec initiales  avec l'utilsateur connecté -->
                 
                 <div class="h-10 w-10 rounded-full bg-indigo-600 flex items-center justify-center text-white font-bold text-sm shadow-lg ring-2 ring-slate-700 group-hover:ring-indigo-400 transition-all">
-                    {{ user.nom_complet|slice:":2" }}
+                    {{ user.nom_complet|slice:":2"|upper }}
                 </div>
             
                 <!-- icone de notification -->
@@ -70,7 +70,7 @@
                     <p class="text-sm text-gray-500">Connecté en tant que</p>
                     <p class="text-sm font-bold text-gray-800 truncate">{{user.email}}</p>
                 </div>
-                <a href="#" onclick="showSection('profile')" class="block px-4 py-2 text-sm text-gray-700 hover:bg-indigo-50 hover:text-indigo-600">
+                <a href="{% url 'profile' %}" onclick="showSection('profile')" class="block px-4 py-2 text-sm text-gray-700 hover:bg-indigo-50 hover:text-indigo-600">
                     👤 Mon Profil
                 </a>
                 <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-indigo-50 hover:text-indigo-600">
@@ -104,7 +104,7 @@
                     </p>
                     <ul class="space-y-1">
                         <li>
-                            <a href="#" onclick="showSection('dashboard')" id="nav-dashboard" class="nav-item flex items-center gap-3 px-3 py-2.5 rounded-lg bg-slate-900 text-white shadow-sm transition-colors">
+                            <a href="{% url 'dashboard' %}" onclick="showSection('dashboard')" id="nav-dashboard" class="nav-item flex items-center gap-3 px-3 py-2.5 rounded-lg bg-slate-900 text-white shadow-sm transition-colors">
                                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"></path></svg>
                                 Dashboard
                             </a>
